npm install cordova-plugin-stepcounter @ionic-native/stepcounter && ionic cap sync

--- a/android/app/src/main/res/xml/config.xml
+++ b/android/app/src/main/res/xml/config.xml
@@ -6,5 +6,9 @@
     <param name="android-package" value="org.apache.cordova.pedometer.PedoListener"/>
   </feature>
 
+  <feature name="CordovaStepCounter">
+    <param name="android-package" value="net.texh.cordovapluginstepcounter.CordovaStepCounter"/>
+  </feature>
+
   
 </widget>
